vault/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - vault.security.me
      secretName: auth-tls-secret-vault
  rules:
    - host: vault.security.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vault
                port:
                  number: 8200
